test/error/parse/ExcessSemicolon.mod
MODULE ExcessSemicolon;
VAR a: INTEGER;;
END ExcessSemicolon.
